@@ -23,7 +23,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - August 27, 2006</p>
+<p>June 14, 2002 - September 9, 2006</p>
 </center>
 
 <hr size=2 noshade>
@@ -169,8 +169,8 @@ New Breed Software</p>
   <blockquote>
     <p>When Tux&nbsp;Paint first loads, a title/credits screen will appear.</p>
 
-    <center><img src="images/tuxpaint-title.jpg" width=324 height=254
-    alt="[Title Screenshot]"></center>
+    <p align=center><img src="images/tuxpaint-title.jpg" width=324 height=254
+    alt="[Title Screenshot]"></p>
 
     <p>Once loading is complete, press a key or click on the mouse to continue.
     (Or, after about 30&nbsp;seconds, the title screen will go away
@@ -189,9 +189,9 @@ New Breed Software</p>
     <dd>
       <p>The toolbar contains the drawing and editing controls.</p>
 
-      <center><img src="images/tools.jpg" width=324 height=254
+      <p align=center><img src="images/tools.jpg" width=324 height=254
       alt="[Tools: Paint, Stamp, Lines, Shapes, Text, Magic, Undo, Redo,
-      Eraser, New, Open, Save, Print, Quit]"></center>
+      Eraser, New, Open, Save, Print, Quit]"></p>
     </dd>
 
     <dt>Middle: Drawing Canvas</dt>
@@ -199,8 +199,8 @@ New Breed Software</p>
       <p>The largest part of the screen, in the center, is the drawing
       canvas.  This is, obviously, where you draw!</p>
 
-      <center><img src="images/canvas.jpg" width=324 height=254
-      alt="[(Canvas)]"></center>
+      <p align=center><img src="images/canvas.jpg" width=324 height=254
+      alt="[(Canvas)]"></p>
     </dd>
 
 
@@ -211,8 +211,8 @@ New Breed Software</p>
       the various brushes available.  When the Rubber&nbsp;Stamp tool
       is selected, it shows the different shapes you can use.</p>
 
-      <center><img src="images/selector.jpg" width=324 height=254
-      alt="[Selectors - Brushes, Letters, Shapes, Stamps]"></center>
+      <p align=center><img src="images/selector.jpg" width=324 height=254
+      alt="[Selectors - Brushes, Letters, Shapes, Stamps]"></p>
     </dd>
 
 
@@ -221,9 +221,13 @@ New Breed Software</p>
       <p>A palette of available colors are shown near the bottom of the
       screen.</p>
 
-      <center><img src="images/colors.jpg" width=324 height=254
+      <p align=center><img src="images/colors.jpg" width=324 height=254
       alt="[Colors - Black, White, Red, Pink, Orange, Yellow, Green, Cyan,
-      Blue, Purple, Brown, Grey]"></center>
+      Blue, Purple, Brown, Grey]"></p>
+
+      <p>(NOTE: You can define your own colors for Tux&nbsp;Paint.
+      See the "<a href="OPTIONS.html"><i>Options</i></a>"
+      documentation.)</p>
     </dd>
 
 
@@ -232,10 +236,10 @@ New Breed Software</p>
       <p>At the very bottom of the screen, Tux, the Linux Penguin,
       provides tips and other information while you draw.</p>
 
-      <center><img src="images/tips.jpg" width=324 height=254
+      <p align=center><img src="images/tips.jpg" width=324 height=254
       alt="(For example: 'Pick a shape. Click to pick the center, drag, then
       let go when it is the size you want.  Move around to rotate it, and
-      click to draw it.)"></center>
+      click to draw it.)"></p>
     </dd>
     </dl>
   </blockquote>
@@ -264,8 +268,8 @@ New Breed Software</p>
 
         <br clear=all>
 
-        <center><img src="images/ex_paint.png" width=120 height=95
-        alt=""></center>
+        <p align=center><img src="images/ex_paint.png" width=120 height=95
+        alt=""></p>
 
         <hr size=1>
       </dd>
@@ -297,8 +301,8 @@ New Breed Software</p>
 
         <br clear=all>
 
-        <center><img src="images/ex_stamps.png" width=182 height=156
-        alt=""></center>
+        <p align=center><img src="images/ex_stamps.png" width=182 height=156
+        alt=""></p>
 
         <hr size=1>
       </dd>
@@ -320,8 +324,8 @@ New Breed Software</p>
 
         <br clear=all>
 
-        <center><img src="images/ex_lines.png" width=76 height=103
-        alt=""></center>
+        <p align=center><img src="images/ex_lines.png" width=76 height=103
+        alt=""></p>
 
         <hr size=1>
       </dd>
@@ -364,8 +368,8 @@ New Breed Software</p>
 
         <br clear=all>
 
-        <center><img src="images/ex_shapes.png" width=177 height=104
-        alt=""></center>
+        <p align=center><img src="images/ex_shapes.png" width=177 height=104
+        alt=""></p>
 
         <hr size=1>
       </dd>
@@ -387,8 +391,8 @@ New Breed Software</p>
 
         <br clear=all>
 
-        <center><img src="images/ex_text.png" width=139 height=69
-        alt=""></center>
+        <p aling=center><img src="images/ex_text.png" width=139 height=69
+        alt=""></p>
 
         <hr size=1>
       </dd>
@@ -590,8 +594,8 @@ New Breed Software</p>
 
         <br clear=all>
 
-        <center><img src="images/open_dialog.jpg" width=194 height=152
-        alt=""></center>
+        <p align=center><img src="images/open_dialog.jpg" width=194 height=152
+        alt=""></p>
 
 	<p>Click a picture to select it, then...</p>
 
@@ -688,8 +692,8 @@ New Breed Software</p>
 	whether you want to save over the old version, or create a new
 	entry (a new file).</p>
 
-        <center><img src="images/saveover.png" width=177 height=110
-        alt=""></center>
+        <p align=center><img src="images/saveover.png" width=177 height=110
+        alt=""></p>
 
 	<p>(NOTE: If either the "<code>saveover</code>" or
         "<code>saveovernew</code>" options are set, it won't ask before saving
